--- a/board_lib/.cproject
+++ b/board_lib/.cproject
@@ -43,7 +43,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Puzzlebox/software/CMSIS/CMSIS/Include}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Puzzlebox/software/lpc_core}/lpc_ip&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Puzzlebox/software/lpc_core}/lpc_chip/chip_17xx_40xx&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Puzzlebox/software/lpc_core}/lpc_core/lpc_chip/chip_common&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Puzzlebox/software/lpc_core}/lpc_chip/chip_common&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Puzzlebox/software/lpc_core}/lpc_board/board_common&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}/source/include}&quot;"/>
 								</option>
